--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tospace",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8002",
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@emotion/react": "^11.10.6",
@@ -12,8 +13,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.3.2",
+    "antd": "^5.4.6",
     "aos": "^2.3.4",
+    "axios": "^1.3.6",
     "daisyui": "^2.51.5",
     "framer-motion": "^10.8.4",
     "lodash": "^4.17.21",
