--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.3.6",
     "daisyui": "^2.51.5",
     "framer-motion": "^10.8.4",
+    "iframe-resizer-react": "^1.1.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
